<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:title="@string/pref_notifications_label"
        android:key ="@string/pref_notifications_key"
        android:summaryOff="@string/pref_notifications_off"
        android:summaryOn="@string/pref_notifications_on"
        android:defaultValue="@string/pref_notifications_default"/>

    <ListPreference
        android:title="@string/pref_theme_label"
        android:key ="@string/pref_theme_key"
        android:defaultValue="@string/pref_theme_light"
        android:entries="@array/pref_theme_options"
        android:entryValues="@array/pref_theme_values"/>


    <ListPreference
        android:title="@string/pref_storage_label"
        android:key ="@string/pref_storage_key"
        android:defaultValue="@string/pref_storage_internal"
        android:entries="@array/pref_storage_options"
        android:entryValues="@array/pref_storage_values"/>

    <CheckBoxPreference
        android:title="@string/pref_talkback_label"
        android:key ="@string/pref_talkback_key"
        android:summaryOff="@string/pref_talkback_off"
        android:summaryOn="@string/pref_talkback_on"
        android:defaultValue="@string/pref_talkback_default"/>

</PreferenceScreen>